--- a/OOP Grund/FilmAPI/FilmAPI/FilmAPI.csproj
+++ b/OOP Grund/FilmAPI/FilmAPI/FilmAPI.csproj
@@ -1,15 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net5.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<StartupObject>FilmAPI.Program</StartupObject>
-		<RootNamespace>FilmAPIDemo</RootNamespace>
+		<RootNamespace>FilmAPI</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
-
 </Project>
