--- a/KVS/Deleteme/.editorconfig
+++ b/KVS/Deleteme/.editorconfig
@@ -75,19 +75,19 @@ dotnet_style_allow_statement_immediately_after_block_experimental = false:warnin
 #### C# Coding Conventions ####
 
 # var preferences
-csharp_style_var_elsewhere = true
-csharp_style_var_for_built_in_types = true
-csharp_style_var_when_type_is_apparent = true
+csharp_style_var_elsewhere =true:suggestion
+csharp_style_var_for_built_in_types =true:suggestion
+csharp_style_var_when_type_is_apparent =true:suggestion
 
 # Expression-bodied members
-csharp_style_expression_bodied_accessors = true
-csharp_style_expression_bodied_constructors = false
-csharp_style_expression_bodied_indexers = true
+csharp_style_expression_bodied_accessors =true:suggestion
+csharp_style_expression_bodied_constructors =true:silent
+csharp_style_expression_bodied_indexers =true:suggestion
 csharp_style_expression_bodied_lambdas = true:suggestion
 csharp_style_expression_bodied_local_functions = true:suggestion
-csharp_style_expression_bodied_methods = false
-csharp_style_expression_bodied_operators = false
-csharp_style_expression_bodied_properties = true
+csharp_style_expression_bodied_methods =true:silent
+csharp_style_expression_bodied_operators =true:silent
+csharp_style_expression_bodied_properties =true:suggestion
 
 # Pattern matching preferences
 csharp_style_pattern_matching_over_as_with_null_check = true
@@ -122,7 +122,7 @@ csharp_style_unused_value_assignment_preference = discard_variable
 csharp_style_unused_value_expression_statement_preference = discard_variable:suggestion
 
 # 'using' directive preferences
-csharp_using_directive_placement = inside_namespace:suggestion
+csharp_using_directive_placement =inside_namespace:warning
 
 # New line preferences
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:suggestion
@@ -246,3 +246,11 @@ dotnet_naming_style.abstractname.required_prefix = Abstract
 dotnet_naming_style.abstractname.required_suffix = 
 dotnet_naming_style.abstractname.word_separator = 
 dotnet_naming_style.abstractname.capitalization = pascal_case
+
+[*.{cs,vb}]
+dotnet_style_require_accessibility_modifiers=for_non_interface_members:warning
+dotnet_style_parentheses_in_other_operators=never_if_unnecessary:warning
+dotnet_diagnostic.CA1000.severity=warning
+dotnet_diagnostic.CA1010.severity=warning
+dotnet_diagnostic.CA1016.severity=warning
+dotnet_diagnostic.CA1018.severity=warning
